# apps/backend/src/modules/vaccines/dto/list-vaccines-query.dto.ts
@@ -1,0 +1,8 @@
+import { IsOptional, IsUUID } from 'class-validator';
+import { PaginationQueryDto } from '../../../common/dto/pagination-query.dto';
+
+export class ListVaccinesQueryDto extends PaginationQueryDto {
+  @IsOptional()
+  @IsUUID()
+  patient_id?: string;
+}
